# utah_organoids

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Deployment.md  EDA.ipynb  EDA.py  LICENSE  README.md  conda_env.yml  create_dj_config.sh  env.yml  pyproject.toml  requirements.txt  sample_dj_local_conf.json  setup.py
.github/workflows/: codebook-profile-build-caller.yaml  codebook-profile-build.yaml  docker_images.yaml  worker-ami-build-2.0.0.yaml  worker-ami-build.yaml  worker-build-caller.yaml
data/: experiment.yml  probe.yaml
docker/spike_sorting_local_worker/: apt_requirements.txt  build.env
docker/standard_worker/: build.env
docs/: CLOUD_UPLOAD_CONFIGURATION_INSTRUCTIONS.md  DATA_ORGANIZATION.md  INSTALLATION_AND_CONFIGURATION_INSTRUCTIONS.md  PROCEDURE.md  README.md  RUN_LOCALLY_GUIDE.md  RUN_ON_THE_CLOUD_GUIDE.md  TROUBLESHOOTING.md  _ONPREMISE_DEPLOYMENT.md
docs/configuration/: DATA_ORGANIZATION.md
docs/installation/: INSTALLATION_AND_CONFIGURATION_INSTRUCTIONS.md  RUN_ON_THE_CLOUD_GUIDE.md
docs/installation_and_configuration/: CLOUD_UPLOAD_CONFIGURATION.md  INSTALLATION_AND_CONFIGURATION.md  RUN_LOCALLY.md  RUN_ON_CLOUD.md  _ONPREMISE_DEPLOYMENT.md
docs/testing/: LOCAL_TESTING_SCIVIZ_GUIDE.md
docs/troubleshooting/: TROUBLESHOOTING.md
images/: culture_diagram.drawio
notebooks/: CREATE_experiments.ipynb  CREATE_new_clustering_task.ipynb  CREATE_new_session.ipynb  CREATE_new_session_with_cloud_upload.ipynb  DELETE_ephys_session.ipynb  DOWNLOAD_spike_sorted_data.ipynb  EXPLORE_array_ephys.ipynb  EXPLORE_ephys_sessions.ipynb  EXPLORE_lfp_analysis.ipynb  EXPLORE_pipeline_architecture.ipynb  EXPLORE_quality_metrics.ipynb  Meeting20230308.ipynb  RUN_array_ephys.ipynb  RUN_debug_spike_sorting.ipynb  UPLOAD_session_data_to_cloud.ipynb  cluster_quality_metrics.ipynb  create_spike_sorting_session.ipynb  examine_spike_sorting_results.ipynb  insert_ephys_session.ipynb  lfp_ingestion.ipynb  organoid_protocol.ipynb  organoid_protocol.py  plot_functions.ipynb  plot_spectogram.ipynb  spike_sorting.ipynb  test_worker.ipynb
notebooks/illustration/: drugimageplot.ipynb  exploration_raw_traces.ipynb  filtering_results_using_quality_metrics.ipynb  kirigamiplots.ipynb  plot_functions.py  results_comparison_after_bandpass_modification.ipynb  spikeinterface.ipynb
notebooks/matlab_pipeline/: plot_script.ipynb  script.ipynb
path_to_sorting_directory/spykingcircus2/: spikeinterface_log.json
path_to_sorting_directory/test/: spikeinterface_log.json
path_to_sorting_directory/test2/: spikeinterface_log.json  spikeinterface_params.json
path_to_sorting_directory/test3/: spikeinterface_log.json  spikeinterface_recording.json
scripts/: amp_horhist.ipynb  initiate_session.py  plot_functions.py
src/workflow/: __init__.py  version.py
src/workflow/pipeline/: __init__.py  analysis.py  culture.py  ephys.py  frame.py  ingestion.py  mua.py  report.py
src/workflow/populate/: notification.py  process.py  worker.py
src/workflow/support/: filemanifest.py  ingestion_support.py
src/workflow/utils/: __init__.py  ingestion_utils.py  initiate_session.py  paths.py
tests/: conftest.py
webapps/sciviz/: docker-compose.yaml  utah_organoids_specsheet.yaml
workflow/: __init__.py  differentiation.py  protocol.py  version.py
workflow/pipeline/: __init__.py  analysis.py  behavior.py  core.py  culture.py  ephys.py  induction.py  ingestion.py  lineage.py  reference.py  status.py
workflow/populate/: __init__.py  notification.py  process.py  worker.py
workflow/support/: __init__.py  filemanifest.py  ingestion_support.py
workflow/utils/: helpers.py  paths.py
