[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "utah_organoids"
version = "0.9.0"
description = "Organoids electrophysiology pipeline using the DataJoint elements"
readme = "README.md"
requires-python = "<3.10"
license = { file = "LICENSE" }
authors = [{ name = "DataJoint", email = "info@datajoint.com" }]
keywords = [
    "datajoint",
    "workflow",
    "organoids",
    "neuroscience datajoint ephys",
]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "datajoint>=0.13",
    "datajoint-utilities @ git+https://github.com/datajoint-company/datajoint-utilities.git",
    "djsciops",
    "element-animal>=0.1.3",
    "element-array-ephys @ git+https://github.com/dj-sciops/utah_organoids_element-array-ephys.git",
    "element-lab==0.1.2",
    "element-session>=0.1.2",
    "element-interface @ git+https://github.com/datajoint/element-interface.git",
    "graphviz",
    "hdbscan",
    "intanrhdreader @ git+https://github.com/datajoint/intanrhdreader.git",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "nbformat>=4.2.0",
    "plotly",
    "spikeinterface[full]==0.100.1",
    "probeinterface",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pre-commit"]
test = ["pytest"]

[project.scripts]
run_workflow = "workflow.populate.process:cli"

[project.urls]
Source = "https://github.com/dj-sciops/utah_organoids"
DataJoint = "https://datajoint.com/docs"

[tool.setuptools]
package-data = { "*" = ["*.pyi", "py.typed"] }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
exclude = '''
/(
    \.git
    | \.venv
    | _build
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
profile = "black"
